[project]
name = "kbel"
version = "0.1.0"
description = "A framework for knowledge base entity linking."
authors = [
    {name = "Marcelo Machado",email = "marcelo.oc.machado@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kif-lib @ git+https://github.com/IBM/kif.git",
    "langchain>=0.3.27,<0.4.0",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.2.2",
    "numpy>=1.25.0"
]

[tool.poetry]
packages = [
  { include = "kbel", from = "src" }
]

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
